--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ambulance
 #DB config
 spring.datasource.url=jdbc:mysql://localhost:3306/final_project
 spring.datasource.username=root
-spring.datasource.password=root21
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 logging.level.org.hibernate.SQL=DEBUG
