Works on controllers

--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ambulance
+spring.application.name=ResqGo
 #DB config
 spring.datasource.url=jdbc:mysql://localhost:3306/final_project
 spring.datasource.username=root
