--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -7,15 +6,19 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.4.5</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath />
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>spring_boot_backend_template</artifactId>
+	<artifactId>ReqGO</artifactId>
 	<version>0.0.1</version>
-	<name>spring_boot_backend_template</name>
-	<description>Spring Boot Template project for developing REST APIs in a Full
-		Stack Application</description>
-	<url />
+	<name>ambulance_booking_service</name>
+	<description>Spring Boot application for managing ambulance bookings and emergency service requests</description>
+	<properties>
+		<java.version>21</java.version>
+		
+	</properties>
+
+
 	<licenses>
 		<license />
 	</licenses>
@@ -28,9 +31,6 @@
 		<tag />
 		<url />
 	</scm>
-	<properties>
-		<java.version>21</java.version>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -48,12 +48,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!-- Spring Security -->
-<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-security</artifactId>
-</dependency>
-
+	
 <!-- JWT Library -->
 <dependency>
     <groupId>io.jsonwebtoken</groupId>
@@ -155,5 +150,8 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
+
+<!---a Lombok is a compile-time-only dependency.
+
+It’s not needed at runtime, and including it just adds unnecessary weight to your JAR.-->
